Z-index fix

--- a/include/style.css
+++ b/include/style.css
@@ -43,7 +43,7 @@ html, body {
 	justify-content: space-between;
 	align-items: center;
 	position: relative;
-	z-index: 1;
+	z-index: 3;
 	padding: 12px 16px;
 	border-bottom: 1px solid #3a3a3a;
 	background: #2a2a2a url('../images/noise-1.svg');
@@ -134,7 +134,6 @@ html, body {
 	background-color: #333;
 	min-width: 160px;
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.5);
-	z-index: 3;
 	top: 100%;
 	left: 0;
 }
